fix(navbar): overflow and navbar on mobile screens

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -11,7 +11,7 @@
 
 body {
   text-align: center;
-  overflow: hidden;
+  overflow: auto;
 }
 
 /* Custom variables for themes */
